@@ -2,5 +2,6 @@
     Changelog file added
     tests/test.py created
     created basic test
+    local used var clear(issue in reuese of object)
 
 Note: This update not added in https://pypi.org/ in package
